--- a/Blog/resources/sass/app.scss
+++ b/Blog/resources/sass/app.scss
@@ -1,4 +1,6 @@
-//
+*{
+  font-family: 'Lato', sans-serif;
+}
 body {
   background: lightgrey;
   color: white;
@@ -9,26 +11,32 @@ body {
     text-decoration: none;
   }
 
-  header {
-    background: black;
-    text-align: center;
-    border-radius: 10px;
-
-    h1 {
-      color: white;
-    }
-  }
-  
-  footer {
+header,footer {
+    height: 80px;
+    background-color: #2a1244;
     display: flex;
-    border-radius: 15px;
-    background: #333;
-    min-height: 200px;
-  
-    p {
-      margin: auto;
+    justify-content: space-between;
+    padding: 0 20px;
+   
+
+    ul {
+        width: 200px;
+        list-style-type: none;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        
+
+        a {
+            color: white;
+            text-decoration: none;
+            transition: all 0.5s ease-in-out;
+            &:hover {
+                color: #0ff;
+            }
+        }
     }
-  }
+}
 
   .hide {
     margin: 20px;
@@ -38,7 +46,7 @@ body {
     margin: 20px;
   
     .category {
-      background: grey;
+      background:#634171;
       border-radius: 15px;
       text-align: center;
       margin: 10px;
@@ -59,8 +67,9 @@ body {
       width: 100px;
       height: 100px;
       padding: 10px;
-      border-radius: 100%;
-      background: white;
+      border-radius: 10%;
+      margin: 5px;;
+      background: #8b7099;
       color: black;
       & > * {
         margin: auto;
